<resources>
    <string name="app_name">TMS</string>
    <string name="homework1">Homework1</string>
    <string name="homework3">Homework3</string>
    <string name="homework2">Homework2</string>
    <string name="my_first_app">My first app</string>
    <string name="buttonLoad">Load</string>
    <string name="enter_image_url">enter image url</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="flags">flags</string>
    <string name="animation">animation</string>
    <string name="minskcountry">MinskCountry</string>
    <string name="potato_0">potato - 0</string>
    <string name="cabbage_0">cabbage - 0</string>
    <string name="beet_0">beet - 0</string>
    <string name="brestcountry">BrestCountry</string>
    <string name="grodnocountry">GrodnoCountry</string>
    <string name="gomelcountry">GomelCountry</string>
    <string name="homework_4">homework 4</string>
    <string name="homework5">homework5</string>
    <string name="homework6">homework6</string>
    <string name="add_coffee">add coffee</string>
    <string name="show_collection">show collection</string>
    <string name="sort_of_coffee">Sort of coffee</string>
    <string name="price_of_coffee">Price of coffee</string>
    <string name="image_url_of_coffee">image url of coffee</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_cannot_be_empty">login cannot be empty</string>
    <string name="password_cannot_be_empty">password cannot be empty</string>
    <string name="password_length_must_be_not_less_than_8_chars">password length must be not less than 8 chars</string>
    <string name="you_are_registered">You are registred!</string>
    <string name="ok">OK</string>
    <string name="sign_in">Sign In</string>
    <string name="homework_7">Homework 7</string>
    <string name="show_phones">show phones</string>
    <string name="add_phone">add phone</string>
    <string name="delete_phone">delete phone</string>
    <string name="enter_model">Enter model</string>
    <string name="enter_os">Enter OS</string>
    <string name="enter_price">Enter price</string>
    <string name="homework_8">Homework 8</string>
    <string name="cryptocurrency">CryptoCurrency</string>
    <string name="timer">Timer</string>
    <string name="homework_9">Homework 9</string>
    <string name="homework_10">Homework 10</string>

    <string name="fourteen">14</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="homework11">Homework11</string>
    <string name="no_connection">No connection</string>
    <string name="homework_12">Homework 12</string>
    <string name="luxlights">%1$.0f Lux</string>
    <string name="homework14">Homework14</string>
</resources>