<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/label_enter_sort_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_of_coffee"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/editText_sort_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@id/label_enter_sort_of_coffee"
        app:layout_constraintTop_toBottomOf="@id/label_enter_sort_of_coffee" />

    <TextView
        android:id="@+id/label_enter_price_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_of_coffee"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/editText_sort_of_coffee"
        app:layout_constraintLeft_toLeftOf="@id/editText_sort_of_coffee"
        android:layout_marginLeft="10dp" />
    <EditText
        android:id="@+id/editText_price_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/label_enter_price_of_coffee"
        app:layout_constraintLeft_toLeftOf="@id/label_enter_price_of_coffee"
        />
    <TextView
        android:id="@+id/label_enter_image_url_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_url_of_coffee"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/editText_price_of_coffee"
        app:layout_constraintLeft_toLeftOf="@id/editText_price_of_coffee"
        android:layout_marginLeft="10dp" />
    <EditText
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/editText_image_url_of_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_enter_image_url_of_coffee"
        app:layout_constraintLeft_toLeftOf="@id/label_enter_image_url_of_coffee"
        />
    <Button
        android:id="@+id/button_create_coffee_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_coffee"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

