<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SixHW.SixActivity"
    android:background="@drawable/bg"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/login"
        app:startIconContentDescription="@string/login"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_login"
        app:startIconDrawable="@drawable/password"
        app:startIconContentDescription="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:enabled="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>